# Scrapling

./: .bandit.yml  .dockerignore  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  ROADMAP.md  api.py  benchmarks.py  cleanup.py  concurrent_crawler.py  crawler_scrapling.py  demo_scraper.py  iherb_scraper.py  iherb_spider.py  main.py  mkdocs.yml  multi_site_clean_spider.py  pyproject.toml  pytest.ini  ruff.toml  scrape.py  searxng_spider.py  server.json  setup.cfg  setup.py  test_cookie_fix_manual.py  tox.ini  zensical.toml
.auto-pr/: issue.json  target-repo.txt
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  03-other.yml  04-docs_issue.yml  config.yml
.github/workflows/: auto-release.yml  code-quality.yml  codex-plugin-scanner.yml  docker-build.yml  publish.yml  release-and-publish.yml  tests.yml
agent-skill/: README.md
agent-skill/Scrapling-Skill/: LICENSE.txt  SKILL.md
agent-skill/Scrapling-Skill/.claude-plugin/: plugin.json
agent-skill/Scrapling-Skill/examples/: 01_fetcher_session.py  02_dynamic_session.py  03_stealthy_session.py  04_spider.py  README.md
agent-skill/Scrapling-Skill/references/: cli.md  mcp-server.md  migrating_from_beautifulsoup.md  nole-research-routing.md  replacing_ai_with_scrapling.md
configs/: example_books.yaml  idealista_maia.yaml
docs/: README.md  README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JP.md  README_KR.md  README_PT.md  README_PT_BR.md  README_RU.md  README_TW.md  benchmarks.md  contributing.md  donate.md  index.md  overview.md  requirements.txt
docs/Core/: using scrapling custom types.md
docs/Examples/: selectorless_stackoverflow.py
docs/Extending Scrapling/: writing storage system.md
docs/ai/: mcp-server.md
docs/api-reference/: adaptor.md  custom-types.md  fetchers.md  mcp-server.md  proxy-rotation.md  response.md  selector.md  spiders.md
docs/cli/: extract-commands.md  interactive-shell.md  overview.md
docs/development/: adaptive_storage_system.md  automatch_storage_system.md  hardening_behavior_changes.md  scrapling_custom_types.md
docs/fetching/: choosing.md  dynamic.md  static.md  stealthy.md
docs/integrations/: scrapy.md
docs/overrides/: main.html
docs/parsing/: adaptive.md  automatch.md  main_classes.md  selection.md
docs/proposals/: invisible-firefox-backend.md
docs/spiders/: advanced.md  architecture.md  getting-started.md  proxy-blocking.md  requests-responses.md  sessions.md
docs/stylesheets/: extra.css
docs/tutorials/: external.md  migrating_from_beautifulsoup.md  replacing_ai.md
e2e/: _docker_helpers.py  _server_helpers.py  conftest.py  test_mcp_json.py  test_mcp_json_playground.py
examples/: xhs_keyword_demo.ipynb  xhs_keyword_poc.py
repo_docs/: README.md  README_CN.md  README_DE.md  README_ES.md  README_JP.md  README_RU.md
scrapling/: __init__.py  _types.py  cli.py  custom_types.py  defaults.py  fetcher.py  fetchers.py  parser.py  storage_adaptors.py  translator.py  utils.py
scrapling/contrib/: __init__.py
scrapling/contrib/scrapy/: __init__.py  adapter.py  middleware.py
scrapling/core/: _html_utils.py  _mcp_auth.py  _shell_signatures.py  _types.py  _url_guard.py  ai.py  ai_adapters.py  ai_extract.py  ai_interact.py  ai_session.py  ai_vision.py  custom_types.py  mixins.py  shell.py  storage.py  storage_adaptors.py  translator.py  utils.py
scrapling/core/utils/: __init__.py  _shell.py  _utils.py  redaction.py
scrapling/engines/: __init__.py  camo.py  constants.py  pw.py  static.py  tools.py
scrapling/engines/_browsers/: __init__.py  _base.py  _camoufox.py  _config_tools.py  _controllers.py  _page.py  _stealth.py  _types.py  _validators.py
scrapling/engines/toolbelt/: __init__.py  ad_domains.py  convertor.py  custom.py  fingerprints.py  navigation.py  proxy_rotation.py
scrapling/extractors/: json_extractor.py
scrapling/fetchers/: __init__.py  chrome.py  firefox.py  requests.py  stealth_chrome.py
scrapling/integrations/: __init__.py  scrapy.py
scrapling/spiders/: __init__.py  cache.py  checkpoint.py  engine.py  links.py  request.py  result.py  robotstxt.py  scheduler.py  session.py  spider.py
scrapling/spiders/templates/: __init__.py  shopify.py  sitemap.py
scrapling/utils/: __init__.py
skills/scrapling/: SKILL.md
tests/: __init__.py  requirements.txt  test_all_functions.py  test_parser_functions.py
tests/ai/: conftest.py  test_ai_mcp.py  test_mcp_http_auth.py  test_url_guard.py
tests/cli/: test_cli.py  test_mcp_cli.py  test_shell_functionality.py
tests/contrib/: test_scrapy_integration.py
tests/core/: test_redaction.py  test_scrapy_integration.py  test_shell_core.py  test_storage_core.py  test_types.py
tests/extractors/: test_json_extractor.py
tests/fetchers/: __init__.py  test_base.py  test_browser_session_lifecycle.py  test_camoufox.py  test_constants.py  test_httpx.py  test_impersonate_list.py  test_merge_request_args.py  test_pages.py  test_playwright.py  test_proxy_rotation.py  test_response_handling.py  test_utils.py  test_validator.py
tests/fetchers/async/: test_async_httpx.py  test_camoufox.py  test_camoufox_session.py  test_cookie_handling.py  test_dynamic.py  test_dynamic_session.py  test_httpx.py  test_playwright.py  test_requests.py  test_requests_session.py  (+2 more)
tests/integrations/: test_scrapy.py
tests/parser/: test_adaptive.py  test_attributes_handler.py  test_automatch.py  test_find_similar_advanced.py  test_general.py  test_html_utils.py  test_parser_advanced.py  test_roadmap_features.py
tests/spiders/: test_cache.py  test_checkpoint.py  test_engine.py  test_force_stop_checkpoint.py  test_links.py  test_request.py  test_result.py  test_robotstxt.py  test_scheduler.py  test_session.py  test_shopify.py  test_sitemap.py  test_spider.py
tests/test_fetchers/: test_stealthy_fetcher.py
wrapper/: config.py  extractor.py  fetcher.py  output.py  runner.py
(+33 files in other folders)
