[metadata]
name = scrapling
version = 0.4.1
author = Karim Shoair
author_email = karim.shoair@pm.me
description = Scrapling is an undetectable, powerful, flexible, high-performance Python library that makes Web Scraping easy and effortless as it should be!
license = BSD
home_page = https://github.com/D4Vinci/Scrapling